--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css"> 
 </HEAD>
 <BODY> 
- <header> I am the header </header>
+ <header> 
+ <div class="headerMainContainer">
+<div class="homeButtonContainer"><a href="index.html"> Vasu Gupta</a></div>
+ </div>
+ </header>
  
 
 <div class="pageRollContainer">
@@ -14,9 +18,36 @@
 </div>
 <div class="toiletRoll">
 Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+
+
 </div> 
 </div>  
 <div style="clear: both;"></div>
-<footer> I am footer </footer>
+<footer> 
+<div class="footerMainContainer">
+<a href="https://www.facebook.com/VasuGupta08">Facebook</a>
+<a href="http://www.linkedin.com/pub/vasu-gupta/53/181/92">LinkedIn</a>
+<a href="mailto:meetvasu15@gmail.com">Email</a>
+
+</div>
+</footer>
 </BODY>
 </HTML>
