--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ Pick any of our beautiful mobile-optimized templates. Customize anything and get
 <div style="clear: both;"></div>
 <footer> 
 <div class="footerMainContainer">
-<a href="https://www.facebook.com/VasuGupta08">Facebook</a>
-<a href="http://www.linkedin.com/pub/vasu-gupta/53/181/92">LinkedIn</a>
-<a href="mailto:meetvasu15@gmail.com">Email</a>
+<a target="_blank" href="https://www.facebook.com/VasuGupta08">Facebook</a>
+<a target="_blank"  href="http://www.linkedin.com/pub/vasu-gupta/53/181/92">LinkedIn</a>
+<a target="_blank"  href="mailto:meetvasu15@gmail.com">Email</a>
+<a target="_blank"  href="VasuGupta.pdf">Resume</a>
 
 </div>
 </footer>
