--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css"> 
 </HEAD>
 <BODY> 
+<div id="loader-top" style="height:4px;   width:0px; position:fixed; top:0px; background: rgb(2, 150, 2); z-index: 1000;"></div> 
+</div>
  <header> 
  <div class="headerMainContainer">
 <div class="homeButtonContainer"><a href="index.html"> Vasu Gupta</a></div>
@@ -14,30 +16,29 @@
 
 <div class="pageRollContainer">
 <div class="leftCol">
+<button onclick="killLoader()">Stop</button><button onclick="initiateLoader()">Start</button>
  Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
 </div>
 <div class="toiletRoll">
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+<div class="toiletRollButton">
 
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+</div>
+<div class="toiletRollButton">
 
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+</div>
+<div class="toiletRollButton">
 
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+</div>
+<div class="toiletRollButton">
 
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+</div>
+<div class="toiletRollButton">
 
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
+</div>
+<div class="toiletRollButton">
 
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
-
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
-
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
-
-Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
-
-
+</div>
+<div style="clear: both;"></div>
 </div> 
 </div>  
 <div style="clear: both;"></div>
@@ -45,10 +46,12 @@ Pick any of our beautiful mobile-optimized templates. Customize anything and get
 <div class="footerMainContainer">
 <a target="_blank" href="https://www.facebook.com/VasuGupta08">Facebook</a>
 <a target="_blank"  href="http://www.linkedin.com/pub/vasu-gupta/53/181/92">LinkedIn</a>
-<a target="_blank"  href="mailto:meetvasu15@gmail.com">Email</a>
+<a  href="mailto:meetvasu15@gmail.com">Email</a>
 <a target="_blank"  href="VasuGupta.pdf">Resume</a>
 
 </div>
 </footer>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"> </script>
+<script  src="common.js"></script>
 </BODY>
 </HTML>
