--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
  </header>
  
 
-<div class="pageRollContainer">
+<div class="pageRollContainer"><!--
 <div class="leftCol">
 <button onclick="killLoader()">Stop</button><button onclick="initiateLoader()">Start</button>
- Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.Pick any of our beautiful mobile-optimized templates. Customize anything and get online instantly! Wix gives you everything you need in one place - reliable hosting, full support, SEO tools and more.
-</div>
+<div class="leftColNav"><span>About me</span></div>
+<div class="leftColNav"></div>
+<div class="leftColNav"></div>
+</div>-->
 <div class="toiletRoll">
 <div align="center" class="toiletRollButton webRtcContainer"><span class="webRtcLogo">
  Web  <img src="images/webrtc-icon.png"> RTC </span>
+ <span class="toiletRollButtonDescText">Prototype of Video Conferencing using Google's WebRTC. A semester long project for cloud computing class.</span>
 </div>
 <div class="toiletRollButton">
 
